# goit-pythonweb-hw-012

./: README.md  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst  mock_settings.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py  messages.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  redis_service.py  users.py
tests/: conftest.py  test_integration_auth.py  test_integration_contacts.py  test_unit_repository_contacts.py
