[tool.poetry]
name = "goit-pythonweb-hw-10"
version = "0.1.0"
description = "Contacts API"
authors = ["Yuliia Nazymko <yulychka12@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },  # Вказує, що папка `src` належить до проекту
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
psycopg2 = "^2.9.10"
pydantic = "^2.10.5"
alembic = "^1.14.0"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
email-validator = "^2.2.0"
python-jose = "^3.3.0"
slowapi = "^0.1.7"
cloudinary = "^1.30.0"
passlib = "^1.7.4"
fastapi-mail = "^1.2.0"
python-multipart = "^0.0.6"
libgravatar = "^1.0.4"
bcrypt = "3.2.2"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
aiosqlite = "^0.21.0"
pytest-cov = "^6.0.0"
redis = "^5.2.1"
redis-lru = "^0.1.2"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"
asyncio_default_fixture_loop_scope = "function"